# pydantic-configtree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst  reference.rst
docs/reference/: astropy.rst  base.rst  cli.rst  index.rst  lookup.rst  main.rst
examples/: nested.py
src/pydantic_configtree/: __init__.py  astropy.py  base.py  logging.py  lookup.py
src/pydantic_configtree/tests/: test_astropy.py  test_cli.py  test_configurable.py  test_lookup.py  test_version.py
src/pydantic_settings_ctapipe/: __init__.py  _version.py  astropy.py  base.py  cli.py  logging.py  lookup.py  sources.py
src/pydantic_settings_ctapipe/tests/: test_astropy.py  test_cli.py  test_configurable.py  test_lookup.py  test_version.py
